add borrow and return logical.

--- a/iCabinet.Core/iCabinet.Core.csproj
+++ b/iCabinet.Core/iCabinet.Core.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AESUtil.cs" />
+    <Compile Include="BCC.cs" />
     <Compile Include="NETSDK.cs" />
     <Compile Include="PgUtil.cs" />
     <Compile Include="SerialPortFactory.cs" />
