--- a/iCabinet.Core/iCabinet.Core.csproj
+++ b/iCabinet.Core/iCabinet.Core.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>iCabinet.Core</RootNamespace>
     <AssemblyName>iCabinet.Core</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Npgsql">
-      <HintPath>..\packages\Npgsql.4.0.9\lib\net451\Npgsql.dll</HintPath>
+      <HintPath>..\packages\Npgsql.4.0.9\lib\net45\Npgsql.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
@@ -47,6 +48,7 @@
   <ItemGroup>
     <Compile Include="AESUtil.cs" />
     <Compile Include="BCC.cs" />
+    <Compile Include="FaceIDUtil.cs" />
     <Compile Include="NETSDK.cs" />
     <Compile Include="PgUtil.cs" />
     <Compile Include="SerialPortFactory.cs" />
