--- a/iCabinet/packages.config
+++ b/iCabinet/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Npgsql" version="4.0.9" targetFramework="net452" />
+  <package id="Npgsql" version="4.0.9" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Buffers" version="4.4.0" targetFramework="net452" />
   <package id="System.Memory" version="4.5.3" targetFramework="net452" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net452" />
