--- a/iCabinet/iCabinet.csproj
+++ b/iCabinet/iCabinet.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Comps\SettingView.xaml.cs">
       <DependentUpon>SettingView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\FaceAni.cs" />
     <Compile Include="Controls\Loading.cs" />
     <Compile Include="Models\ListData.cs" />
     <Compile Include="Models\ResSling.cs" />
@@ -201,6 +202,14 @@
       <Project>{064d7aa6-4e2a-4b70-b5c1-6ce65192203e}</Project>
       <Name>iCabinet.Core</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\face0.png" />
+    <Resource Include="Images\face1.png" />
+    <Resource Include="Images\face2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\scan.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\WPFMediaKit.2.2.0\build\WPFMediaKit.targets" Condition="Exists('..\packages\WPFMediaKit.2.2.0\build\WPFMediaKit.targets')" />
