--- a/iCabinet.Core/iCabinet.Core.csproj
+++ b/iCabinet.Core/iCabinet.Core.csproj
@@ -55,6 +55,7 @@
     <Compile Include="SpConfig.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TabTipUtil.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
